RTL: fix cardbar margins and alignment

--- a/app/javascript/styles/mastodon/rtl.scss
+++ b/app/javascript/styles/mastodon/rtl.scss
@@ -353,4 +353,10 @@ body.rtl {
       margin-right: 0;
     }
   }
+
+  .card__bar .display-name {
+    margin-left: 0;
+    margin-right: 15px;
+    text-align: right;
+  }
 }
